luajit-build.log
LuaJIT-2.0.5/
LuaJIT-2.0.5/COPYRIGHT
LuaJIT-2.0.5/Makefile
LuaJIT-2.0.5/README
LuaJIT-2.0.5/doc/
LuaJIT-2.0.5/doc/bluequad-print.css
LuaJIT-2.0.5/doc/bluequad.css
LuaJIT-2.0.5/doc/changes.html
LuaJIT-2.0.5/doc/contact.html
LuaJIT-2.0.5/doc/ext_c_api.html
LuaJIT-2.0.5/doc/ext_ffi.html
LuaJIT-2.0.5/doc/ext_ffi_api.html
LuaJIT-2.0.5/doc/ext_ffi_semantics.html
LuaJIT-2.0.5/doc/ext_ffi_tutorial.html
LuaJIT-2.0.5/doc/ext_jit.html
LuaJIT-2.0.5/doc/extensions.html
LuaJIT-2.0.5/doc/faq.html
LuaJIT-2.0.5/doc/img/
LuaJIT-2.0.5/doc/img/contact.png
LuaJIT-2.0.5/doc/install.html
LuaJIT-2.0.5/doc/luajit.html
LuaJIT-2.0.5/doc/running.html
LuaJIT-2.0.5/doc/status.html
LuaJIT-2.0.5/dynasm/
LuaJIT-2.0.5/dynasm/dasm_arm.h
LuaJIT-2.0.5/dynasm/dasm_arm.lua
LuaJIT-2.0.5/dynasm/dasm_mips.h
LuaJIT-2.0.5/dynasm/dasm_mips.lua
LuaJIT-2.0.5/dynasm/dasm_ppc.h
LuaJIT-2.0.5/dynasm/dasm_ppc.lua
LuaJIT-2.0.5/dynasm/dasm_proto.h
LuaJIT-2.0.5/dynasm/dasm_x64.lua
LuaJIT-2.0.5/dynasm/dasm_x86.h
LuaJIT-2.0.5/dynasm/dasm_x86.lua
LuaJIT-2.0.5/dynasm/dynasm.lua
LuaJIT-2.0.5/etc/
LuaJIT-2.0.5/etc/luajit.1
LuaJIT-2.0.5/etc/luajit.pc
LuaJIT-2.0.5/src/
LuaJIT-2.0.5/src/Makefile
LuaJIT-2.0.5/src/Makefile.dep
LuaJIT-2.0.5/src/host/
LuaJIT-2.0.5/src/host/README
LuaJIT-2.0.5/src/host/buildvm.c
LuaJIT-2.0.5/src/host/buildvm.h
LuaJIT-2.0.5/src/host/buildvm_asm.c
LuaJIT-2.0.5/src/host/buildvm_fold.c
LuaJIT-2.0.5/src/host/buildvm_lib.c
LuaJIT-2.0.5/src/host/buildvm_peobj.c
LuaJIT-2.0.5/src/host/genminilua.lua
LuaJIT-2.0.5/src/host/minilua.c
LuaJIT-2.0.5/src/jit/
LuaJIT-2.0.5/src/jit/bc.lua
LuaJIT-2.0.5/src/jit/bcsave.lua
LuaJIT-2.0.5/src/jit/dis_arm.lua
LuaJIT-2.0.5/src/jit/dis_mips.lua
LuaJIT-2.0.5/src/jit/dis_mipsel.lua
LuaJIT-2.0.5/src/jit/dis_ppc.lua
LuaJIT-2.0.5/src/jit/dis_x64.lua
LuaJIT-2.0.5/src/jit/dis_x86.lua
LuaJIT-2.0.5/src/jit/dump.lua
LuaJIT-2.0.5/src/jit/v.lua
LuaJIT-2.0.5/src/lauxlib.h
LuaJIT-2.0.5/src/lib_aux.c
LuaJIT-2.0.5/src/lib_base.c
LuaJIT-2.0.5/src/lib_bit.c
LuaJIT-2.0.5/src/lib_debug.c
LuaJIT-2.0.5/src/lib_ffi.c
LuaJIT-2.0.5/src/lib_init.c
LuaJIT-2.0.5/src/lib_io.c
LuaJIT-2.0.5/src/lib_jit.c
LuaJIT-2.0.5/src/lib_math.c
LuaJIT-2.0.5/src/lib_os.c
LuaJIT-2.0.5/src/lib_package.c
LuaJIT-2.0.5/src/lib_string.c
LuaJIT-2.0.5/src/lib_table.c
LuaJIT-2.0.5/src/lj.supp
LuaJIT-2.0.5/src/lj_alloc.c
LuaJIT-2.0.5/src/lj_alloc.h
LuaJIT-2.0.5/src/lj_api.c
LuaJIT-2.0.5/src/lj_arch.h
LuaJIT-2.0.5/src/lj_asm.c
LuaJIT-2.0.5/src/lj_asm.h
LuaJIT-2.0.5/src/lj_asm_arm.h
LuaJIT-2.0.5/src/lj_asm_mips.h
LuaJIT-2.0.5/src/lj_asm_ppc.h
LuaJIT-2.0.5/src/lj_asm_x86.h
LuaJIT-2.0.5/src/lj_bc.c
LuaJIT-2.0.5/src/lj_bc.h
LuaJIT-2.0.5/src/lj_bcdump.h
LuaJIT-2.0.5/src/lj_bcread.c
LuaJIT-2.0.5/src/lj_bcwrite.c
LuaJIT-2.0.5/src/lj_carith.c
LuaJIT-2.0.5/src/lj_carith.h
LuaJIT-2.0.5/src/lj_ccall.c
LuaJIT-2.0.5/src/lj_ccall.h
LuaJIT-2.0.5/src/lj_ccallback.c
LuaJIT-2.0.5/src/lj_ccallback.h
LuaJIT-2.0.5/src/lj_cconv.c
LuaJIT-2.0.5/src/lj_cconv.h
LuaJIT-2.0.5/src/lj_cdata.c
LuaJIT-2.0.5/src/lj_cdata.h
LuaJIT-2.0.5/src/lj_char.c
LuaJIT-2.0.5/src/lj_char.h
LuaJIT-2.0.5/src/lj_clib.c
LuaJIT-2.0.5/src/lj_clib.h
LuaJIT-2.0.5/src/lj_cparse.c
LuaJIT-2.0.5/src/lj_cparse.h
LuaJIT-2.0.5/src/lj_crecord.c
LuaJIT-2.0.5/src/lj_crecord.h
LuaJIT-2.0.5/src/lj_ctype.c
LuaJIT-2.0.5/src/lj_ctype.h
LuaJIT-2.0.5/src/lj_debug.c
LuaJIT-2.0.5/src/lj_debug.h
LuaJIT-2.0.5/src/lj_def.h
LuaJIT-2.0.5/src/lj_dispatch.c
LuaJIT-2.0.5/src/lj_dispatch.h
LuaJIT-2.0.5/src/lj_emit_arm.h
LuaJIT-2.0.5/src/lj_emit_mips.h
LuaJIT-2.0.5/src/lj_emit_ppc.h
LuaJIT-2.0.5/src/lj_emit_x86.h
LuaJIT-2.0.5/src/lj_err.c
LuaJIT-2.0.5/src/lj_err.h
LuaJIT-2.0.5/src/lj_errmsg.h
LuaJIT-2.0.5/src/lj_ff.h
LuaJIT-2.0.5/src/lj_ffrecord.c
LuaJIT-2.0.5/src/lj_ffrecord.h
LuaJIT-2.0.5/src/lj_frame.h
LuaJIT-2.0.5/src/lj_func.c
LuaJIT-2.0.5/src/lj_func.h
LuaJIT-2.0.5/src/lj_gc.c
LuaJIT-2.0.5/src/lj_gc.h
LuaJIT-2.0.5/src/lj_gdbjit.c
LuaJIT-2.0.5/src/lj_gdbjit.h
LuaJIT-2.0.5/src/lj_ir.c
LuaJIT-2.0.5/src/lj_ir.h
LuaJIT-2.0.5/src/lj_ircall.h
LuaJIT-2.0.5/src/lj_iropt.h
LuaJIT-2.0.5/src/lj_jit.h
LuaJIT-2.0.5/src/lj_lex.c
LuaJIT-2.0.5/src/lj_lex.h
LuaJIT-2.0.5/src/lj_lib.c
LuaJIT-2.0.5/src/lj_lib.h
LuaJIT-2.0.5/src/lj_load.c
LuaJIT-2.0.5/src/lj_mcode.c
LuaJIT-2.0.5/src/lj_mcode.h
LuaJIT-2.0.5/src/lj_meta.c
LuaJIT-2.0.5/src/lj_meta.h
LuaJIT-2.0.5/src/lj_obj.c
LuaJIT-2.0.5/src/lj_obj.h
LuaJIT-2.0.5/src/lj_opt_dce.c
LuaJIT-2.0.5/src/lj_opt_fold.c
LuaJIT-2.0.5/src/lj_opt_loop.c
LuaJIT-2.0.5/src/lj_opt_mem.c
LuaJIT-2.0.5/src/lj_opt_narrow.c
LuaJIT-2.0.5/src/lj_opt_sink.c
LuaJIT-2.0.5/src/lj_opt_split.c
LuaJIT-2.0.5/src/lj_parse.c
LuaJIT-2.0.5/src/lj_parse.h
LuaJIT-2.0.5/src/lj_record.c
LuaJIT-2.0.5/src/lj_record.h
LuaJIT-2.0.5/src/lj_snap.c
LuaJIT-2.0.5/src/lj_snap.h
LuaJIT-2.0.5/src/lj_state.c
LuaJIT-2.0.5/src/lj_state.h
LuaJIT-2.0.5/src/lj_str.c
LuaJIT-2.0.5/src/lj_str.h
LuaJIT-2.0.5/src/lj_strscan.c
LuaJIT-2.0.5/src/lj_strscan.h
LuaJIT-2.0.5/src/lj_tab.c
LuaJIT-2.0.5/src/lj_tab.h
LuaJIT-2.0.5/src/lj_target.h
LuaJIT-2.0.5/src/lj_target_arm.h
LuaJIT-2.0.5/src/lj_target_mips.h
LuaJIT-2.0.5/src/lj_target_ppc.h
LuaJIT-2.0.5/src/lj_target_x86.h
LuaJIT-2.0.5/src/lj_trace.c
LuaJIT-2.0.5/src/lj_trace.h
LuaJIT-2.0.5/src/lj_traceerr.h
LuaJIT-2.0.5/src/lj_udata.c
LuaJIT-2.0.5/src/lj_udata.h
LuaJIT-2.0.5/src/lj_vm.h
LuaJIT-2.0.5/src/lj_vmevent.c
LuaJIT-2.0.5/src/lj_vmevent.h
LuaJIT-2.0.5/src/lj_vmmath.c
LuaJIT-2.0.5/src/ljamalg.c
LuaJIT-2.0.5/src/lua.h
LuaJIT-2.0.5/src/lua.hpp
LuaJIT-2.0.5/src/luaconf.h
LuaJIT-2.0.5/src/luajit.c
LuaJIT-2.0.5/src/luajit.h
LuaJIT-2.0.5/src/lualib.h
LuaJIT-2.0.5/src/msvcbuild.bat
LuaJIT-2.0.5/src/ps4build.bat
LuaJIT-2.0.5/src/psvitabuild.bat
LuaJIT-2.0.5/src/vm_arm.dasc
LuaJIT-2.0.5/src/vm_mips.dasc
LuaJIT-2.0.5/src/vm_ppc.dasc
LuaJIT-2.0.5/src/vm_ppcspe.dasc
LuaJIT-2.0.5/src/vm_x86.dasc
LuaJIT-2.0.5/src/xedkbuild.bat
==== Building LuaJIT 2.0.5 ====
make -C src
make[1]: Entering directory '/tmp/SBo/LuaJIT-2.0.5/src'
lj_arch.h:55:2: error: #error "No support for this architecture (yet)"
   55 | #error "No support for this architecture (yet)"
      |  ^~~~~
lj_arch.h:294:2: error: #error "No target architecture defined"
  294 | #error "No target architecture defined"
      |  ^~~~~
lj_arch.h:55:2: error: #error "No support for this architecture (yet)"
   55 | #error "No support for this architecture (yet)"
      |  ^~~~~
lj_arch.h:294:2: error: #error "No target architecture defined"
  294 | #error "No target architecture defined"
      |  ^~~~~
lj_arch.h:55:2: error: #error "No support for this architecture (yet)"
   55 | #error "No support for this architecture (yet)"
      |  ^~~~~
lj_arch.h:294:2: error: #error "No target architecture defined"
  294 | #error "No target architecture defined"
      |  ^~~~~
lj_arch.h:55:2: error: #error "No support for this architecture (yet)"
   55 | #error "No support for this architecture (yet)"
      |  ^~~~~
lj_arch.h:294:2: error: #error "No target architecture defined"
  294 | #error "No target architecture defined"
      |  ^~~~~
lj_arch.h:55:2: error: #error "No support for this architecture (yet)"
   55 | #error "No support for this architecture (yet)"
      |  ^~~~~
lj_arch.h:294:2: error: #error "No target architecture defined"
  294 | #error "No target architecture defined"
      |  ^~~~~
lj_arch.h:55:2: error: #error "No support for this architecture (yet)"
   55 | #error "No support for this architecture (yet)"
      |  ^~~~~
lj_arch.h:294:2: error: #error "No target architecture defined"
  294 | #error "No target architecture defined"
      |  ^~~~~
Makefile:254: *** Unsupported target architecture.  Stop.
make[1]: Leaving directory '/tmp/SBo/LuaJIT-2.0.5/src'
make: *** [Makefile:110: default] Error 2
